# flight-debrief

./: .gitignore  CLAUDE.md  README.md  app.py  mvp_detect_unstable_approach.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: log-approach.xml
data/samples/: approach_log.csv  approach_log_bad_bank.csv  c172_approach_stable.csv  c172_approach_unstable.csv  c172_approach_unstable_v2.csv  c172_approach_unstable_v3.csv  c172_fg_approach.csv
flight_debrief/: __init__.py  airports.py  analyze.py  approach.py  centerline.py  detect.py  domain.py  nav.py  preprocess.py  render.py
outputs/: c172_fg_report.txt  c172_fg_report_bad_bank.txt  report_stable.txt  report_unstable.txt  report_unstable_v2.txt  report_unstable_v3.txt
tests/: test_approach.py  test_detect.py  test_preprocess.py
